2011-11-30 Julien Nicoulaud <julien.nicoulaud@gmail.com>

	* 6-1 :
	Initial release of the package.
