@@ -1,15 +1,17 @@
 # Maintainer: Julien Nicoulaud <julien.nicoulaud@gmail.com>
 # Source: https://github.com/nicoulaj/archlinux-packages
 pkgname=hda-jack-retask-bzr
-pkgver=6
+_pkgname=hda-jack-retask
+pkgver=9
 pkgrel=1
 pkgdesc="Retask your jack plugs (eg. turn your microphone jack plug into a headphone one)."
-arch=('x86' 'x86_64')
+arch=(x86 x86_64)
 url="https://code.launchpad.net/~diwic/+junk/hda-jack-retask"
 license=(GPL2)
-depends=(gtk3)
+depends=(gtk3 desktop-file-utils)
 makedepends=(bzr)
 changelog=Changelog
+install=${pkgname}.install
 
 _bzrtrunk="https://code.launchpad.net/~diwic/+junk/hda-jack-retask"
 _bzrmod="hda-jack-retask"
@@ -28,10 +30,26 @@ build() {
 
   msg2 "Building..."
   cd "${srcdir}/${_bzrmod}"
-  make
+  make || return 1
+
+  msg2 "Generate desktop application entry..."
+  cat > "${srcdir}"/${_pkgname}.desktop << EOF
+[Desktop Entry]
+Name=HDA jack retask
+Comment=${pkgdesc}
+Exec=/usr/bin/hda-jack-retask
+Terminal=false
+Icon=applications-system
+Type=Application
+Categories=Settings;HardwareSettings;
+EOF
 }
 
 package() {
+  msg2 "Installing..."
   cd "${srcdir}/${_bzrmod}"
   make install DESTDIR="${pkgdir}"
+
+  msg2 "Install desktop application entry in /usr/share/applications..."
+  install -Dm644 "${srcdir}"/${_pkgname}.desktop "${pkgdir}"/usr/share/applications/${_pkgname}.desktop
 }
