@@ -1,3 +1,9 @@
+2012-01-15 Julien Nicoulaud <julien.nicoulaud@gmail.com>
+
+	* 9-1 :
+	Update from upstream.
+	Deploy desktop application entry.
+
 2011-11-30 Julien Nicoulaud <julien.nicoulaud@gmail.com>
 
 	* 6-1 :
